fixed title on small displays, fixed fork me on github link

--- a/static/theme.css
+++ b/static/theme.css
@@ -13,3 +13,7 @@ a:hover {
 #secretFile {
     display: inline-block;
 }
+
+@media (min-width: 450px) {
+    .container > .title {text-align: center;}
+}
